--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_bg"
     tools:context=".MainActivity">
     <LinearLayout
         android:id="@+id/menu"
@@ -20,7 +21,7 @@
             android:gravity="center_horizontal"
             android:textSize="40sp"
             android:textAllCaps="false"
-            android:background="#f74"
+
             />
         <Button
             android:id="@+id/lottery"
@@ -29,6 +30,14 @@
             android:text="Big Lottery"
             android:textAllCaps="false"
             android:onClick="lottery"
+            />
+        <Button
+            android:id="@+id/guess1A2B"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Guess1A2B"
+            android:textAllCaps="false"
+            android:onClick="guess1A2BWelcome"
             />
     </LinearLayout>
 </RelativeLayout>
