Add reset and setting button behavior and code logic

--- a/app/src/main/res/layout/activity_guess1_a2_bactivity.xml
+++ b/app/src/main/res/layout/activity_guess1_a2_bactivity.xml
@@ -55,7 +55,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="Reset"
+            android:text="Setting"
             android:textAllCaps="false"
             android:layout_margin="4dp"
             android:onClick="setting1A2B"
