Add sign view and layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,5 +39,13 @@
             android:textAllCaps="false"
             android:onClick="guess1A2BWelcome"
             />
+        <Button
+            android:id="@+id/sign"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sign"
+            android:textAllCaps="false"
+            android:onClick="sign"
+            />
     </LinearLayout>
 </RelativeLayout>
