Add stop watch layout and picture resource

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,13 @@
             android:textAllCaps="false"
             android:onClick="sign"
             />
+        <Button
+            android:id="@+id/stopwatch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Stop Watch"
+            android:textAllCaps="false"
+            android:onClick="stopWatch"
+            />
     </LinearLayout>
 </RelativeLayout>
