--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -16,6 +16,7 @@
         android:gravity="center_horizontal"
         />
     <LinearLayout
+        android:id="@+id/buttonLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -51,5 +52,12 @@
         android:layout_margin="4dp"
         android:onClick="exitStopWatch"
         android:layout_alignParentBottom="true"
+        />
+    <ListView
+        android:id="@+id/stopWatchLap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonLine"
+        android:layout_above="@id/exitButton"
         />
 </RelativeLayout>
