--- a/app/src/main/res/layout/activity_ball_game.xml
+++ b/app/src/main/res/layout/activity_ball_game.xml
@@ -7,7 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".BallGameActivity">
     <com.suhun.basiccourseall.functionobj.BallGameView
+        android:id="@+id/ballGameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        />
+    <Button
+        android:id="@+id/stopBallGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop"
+        android:onClick="stopBallGame"
         />
 </FrameLayout>
